<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.main.MainFragment">


    <ImageView
        android:id="@+id/image_day_or_night"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_day"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="280dp"
        android:background="@drawable/bg_linear"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="18dp"
                android:textAlignment="center"
                android:textColor="@color/gray"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:text="@string/search_city"
                android:layout_marginStart="21dp"
                android:id="@+id/btn_town"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_btn_town"
                android:drawableEnd="@drawable/ic_facebook_places"
                android:drawablePadding="5dp"
                android:padding="10dp"
                android:textAllCaps="false"
                android:textColor="@color/blue"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="48dp">

            <ImageView
                android:id="@+id/image_weather"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/ic_sunny"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_weather" />

            <TextView
                android:id="@+id/txt_degree"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-condensed-light"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="64sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_degree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginTop="11dp"
                android:src="@drawable/ic__c"
                app:layout_constraintStart_toEndOf="@id/txt_degree"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_temp_max"
                style="@style/txt_light"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_temp_min"
                android:layout_marginEnd="7dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/txt_light" />

            <ImageView
                android:id="@+id/image_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                android:src="@drawable/ic_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="13dp"
                android:src="@drawable/ic_down"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="49dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="41dp">

            <ImageView
                android:id="@+id/image_humidity"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="6dp"
                android:src="@drawable/ic_humidity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                />

            <ImageView
                android:id="@+id/image_pressure"
                android:layout_width="24dp"
                android:layout_height="18dp"
                android:layout_marginTop="2dp"
                android:src="@drawable/ic_pressure"
                app:layout_constraintEnd_toStartOf="@id/image_wind"
                app:layout_constraintStart_toEndOf="@id/image_humidity"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_wind"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="14dp"
                android:src="@drawable/ic__01_wind_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_humidity_in_percent"
                style="@style/txt_black"
                android:layout_marginStart="3dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_humidity" />

            <TextView
                android:id="@+id/txt_humidity"
                style="@style/txt_gray"
                android:layout_marginTop="4dp"
                android:text="@string/humidity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_humidity_in_percent" />

            <TextView
                android:id="@+id/txt_pressure_m_bar"
                style="@style/txt_black"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toStartOf="@id/image_wind"
                app:layout_constraintStart_toEndOf="@id/image_humidity"
                app:layout_constraintTop_toBottomOf="@id/image_pressure" />

            <TextView
                style="@style/txt_gray"
                android:text="@string/pressure"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/image_wind"
                app:layout_constraintStart_toEndOf="@id/image_humidity" />

            <TextView
                android:id="@+id/txt_wind_in_km"
                style="@style/txt_black"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_wind" />

            <TextView
                android:id="@+id/txt_wind"
                style="@style/txt_gray"
                android:layout_marginEnd="16dp"
                android:text="@string/wind"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="41dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="47dp">

            <ImageView
                android:id="@+id/image_sunrise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="1dp"
                android:src="@drawable/ic_sunrise"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_sunrise_time"
                style="@style/txt_black"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toBottomOf="@id/image_sunrise" />

            <TextView
                android:id="@+id/txt_sunrise"
                style="@style/txt_gray"
                android:layout_marginStart="14dp"
                android:layout_marginTop="4dp"
                android:text="@string/sunrise"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_sunrise_time" />

            <ImageView
                android:id="@+id/image_day_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="12dp"
                android:src="@drawable/ic_day_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_sunset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:src="@drawable/ic_sunset"
                app:layout_constraintEnd_toStartOf="@id/image_day_time"
                app:layout_constraintStart_toEndOf="@id/image_sunrise"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_feel_like"
                style="@style/txt_black"
                app:layout_constraintStart_toStartOf="@id/image_day_time"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="@id/image_day_time"
                app:layout_constraintTop_toBottomOf="@id/image_day_time" />

            <TextView
                android:id="@+id/txt_feel_likes"
                style="@style/txt_gray"
                android:layout_marginEnd="3dp"
                android:text="@string/feel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                 />

            <TextView
                android:id="@+id/txt_sunset_time"
                style="@style/txt_black"
                android:layout_marginTop="14dp"
                app:layout_constraintEnd_toStartOf="@id/image_day_time"
                app:layout_constraintStart_toEndOf="@id/image_sunrise"
                app:layout_constraintTop_toBottomOf="@id/image_sunset" />

            <TextView
                style="@style/txt_gray"
                android:text="@string/sunset"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/image_day_time"
                app:layout_constraintStart_toEndOf="@id/image_sunrise" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:overScrollMode="never"
            android:id="@+id/rv_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_card" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>